tests/expectations/compiler/statements/assign_fail.out
Error [ETYC0372000]: Invalid assignment target: x::y.
    --> compiler-test:4:9
     |
   4 |         x::y = y;
     |         ^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: 5u8.
    --> compiler-test:6:9
     |
   6 |         5u8 = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x + x.
    --> compiler-test:8:9
     |
   8 |         x + x = y;
     |         ^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x.neg().
    --> compiler-test:10:9
     |
  10 |         -x = y;
     |         ^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x.not().
    --> compiler-test:12:9
     |
  12 |         !x = y;
     |         ^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: a ? x : x.
    --> compiler-test:14:9
     |
  14 |         a? x : x = y;
     |         ^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x as u32.
    --> compiler-test:16:9
     |
  16 |         x as u32 = y;
     |         ^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: [x, x, x].
    --> compiler-test:18:9
     |
  18 |         [x, x, x] = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: (x, x, x).
    --> compiler-test:20:9
     |
  20 |         (x, x, x) = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x { x: y }.
    --> compiler-test:22:9
     |
  22 |         x {x: y } = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x().
    --> compiler-test:24:9
     |
  24 |         x() = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: 4u8.
    --> compiler-test:26:9
     |
  26 |         4u8 = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
